--- a/project3/web50/projects/2020/x/wiki/encyclopedia/templates/encyclopedia/content.html
+++ b/project3/web50/projects/2020/x/wiki/encyclopedia/templates/encyclopedia/content.html
@@ -5,15 +5,8 @@
 {% endblock %}
 
 {% block body %}
-    <h1>All Pages</h1>
 
-    <ul>
-        {% for entry in entries %}
-        <li>noah</li>
-        <li>
-                <a href="{% url 'content'}%">{{ entry }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+    {% content %}
 
+    {% endblock %}
 {% endblock %}
