--- a/project3/web50/projects/2020/x/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/project3/web50/projects/2020/x/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -11,7 +11,9 @@
         {% for entry in entries %}
             
             <li>
-                <a href="{% url 'content' %}?name={{entry}}">{{ entry }}</a>
+                
+                <!--a href="wiki/{{entry}}">{{ entry }}</a>-->
+                <a href="wiki/{{entry}}">{{ entry }}</a>
             </li>
         {% endfor %}
     </ul>
