--- a/test project/hello/greet/templates/hello/greet.html
+++ b/test project/hello/greet/templates/hello/greet.html
@@ -4,7 +4,6 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Hello, World!</h1>
-         <a href="{{entry}}">{{ entry }}</a> 
+        <h1>Hello, {{name}}!</h1>
     </body>
 </html>
