--- a/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/HTML.html
+++ b/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/HTML.html
@@ -1,3 +1,5 @@
+{% extends "encyclopedia/layout.html" %}
+{% block body %}
 <h1>HTML</h1>
 
 <p>HTML is a markup language that can be used to define the structure of a web page. HTML elements include</p>
@@ -11,3 +13,5 @@
 </ul>
 
 <p>The most recent major version of HTML is HTML5.</p>
+
+{% endblock %}
