--- a/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/Python.html
+++ b/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/Python.html
@@ -1,3 +1,7 @@
-{% extends "encyclopedia/layout.html" %}<h1>Python</h1>
+{% extends "encyclopedia/layout.html" %}
+{% block body %}
+<h1>Python</h1>
 
 <p>Python is a programming language that can be used both for writing <strong>command-line scripts</strong> or building <strong>web applications</strong>.</p>
+
+{% endblock %}
