edit functionality with prepopulating already existing data added

--- a/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/Django.html
+++ b/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/Django.html
@@ -3,5 +3,5 @@
 <h1>Django</h1>
 
 <p>Django is a web framework written using <a href="/wiki/Python">Python</a> that allows for the design of web applications that generate <a href="/wiki/HTML">HTML</a> dynamically.</p>
-
+<a href="{% url 'encyclopedia:editPage' name='Django'  %}">Edit Page</a>
 {% endblock %}
