--- a/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/Git.html
+++ b/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/Git.html
@@ -7,5 +7,5 @@
 <h2>GitHub</h2>
 
 <p>GitHub is an online service for hosting git repositories.</p>
-
+<a href="{% url 'encyclopedia:editPage' name='Git'  %}">Edit Page</a>
 {% endblock %}
