--- a/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/test1.html
+++ b/project3/web50/projects/2020/x/wiki/encyclopedia/templates/wiki/test1.html
@@ -5,13 +5,13 @@
 <p>HTML is a markup language that can be used to define the structure of a web page. HTML elements include</p>
 
 <ul>
-<li>headings</li>
-<li>paragraphs</li>
-<li>lists</li>
-<li>links</li>
-<li>and more!</li>
+<li><p>headings</p></li>
+<li><p>paragraphs</p></li>
+<li><p>lists</p></li>
+<li><p>links</p></li>
+<li><p>and more!</p></li>
 </ul>
 
 <p>The most recent major version of HTML is HTML5.</p>
-<a href="{% url 'encyclopedia:editPage' name='HTML'  %}">Edit Page</a>
+<a href="{% url 'encyclopedia:editPage' name='test1'  %}">Edit Page</a>
 {% endblock %}
